# ina2227

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: on_commit.yml
src/: alert.rs  calibration.rs  error.rs  flags.rs  lib.rs  register.rs
src/alert/: config.rs  limit.rs  mod.rs
src/config/: config1.rs  config2.rs  mod.rs
tests/: alert.rs  alert_limit.rs  calibration.rs  config.rs  flags.rs  id.rs  measurements.rs
